Fix pagetree row overflow

--- a/cms/static/cms/sass/cms.pagetree.scss
+++ b/cms/static/cms/sass/cms.pagetree.scss
@@ -64,7 +64,7 @@ $color-background-blue-hover: #e6f6fd;
 	ul.header li .col2 > div { font-size:10px; line-height:14px; border:none; background:none; }
 
 	// row
-	li .cont { display:block; border-top:1px solid $color-border !important; overflow: hidden; }
+	li .cont { display:block; border-top:1px solid $color-border !important; overflow: visible!important; }
 	li.open > .cont { border-bottom:1px solid $color-border !important; }
 	li.open ul .cont { border-top:none !important; border-bottom:1px solid $color-border !important; }
 	li.moveable > div { border-bottom:none !important; }
@@ -132,6 +132,10 @@ $color-background-blue-hover: #e6f6fd;
 			@include inline-block(); min-width:100px; }
 		span { display:inline !important; }
 	}
+}
+// set the overflow to hidden at smaller resolution to hide longer titles in the pagetree
+@media only screen and (max-width: 800px){
+	#sitemap li .cont { overflow:hidden!important; }
 }
 
 // filter button on top right
